Add resistance to malicious messages
