# x/verification/keeper/msg_server_largeproof.go
@@ -12,12 +12,18 @@ import (
 func (k msgServer) Largeproof(goCtx context.Context, msg *types.MsgLargeproof) (*types.MsgLargeproofResponse, error) {
 	ctx := sdk.UnwrapSDKContext(goCtx)
 
-	k.storeService.OpenKVStore(ctx).Set([]byte(msg.ProofHash+strconv.Itoa(int(msg.Index))), []byte(msg.Proof))
+	k.storeService.OpenKVStore(ctx).Set([]byte(msg.Creator+msg.ProofHash+strconv.Itoa(int(msg.Index))), []byte(msg.Proof))
 	if msg.Finished {
 		answer := []byte("")
 		for i := 0; i <= int(msg.Index); i++ {
-			partial, _ := k.storeService.OpenKVStore(ctx).Get([]byte(msg.ProofHash + strconv.Itoa(i)))
-			answer = append(answer, partial...)
+			partial, _ := k.storeService.OpenKVStore(ctx).Get([]byte(msg.Creator + msg.ProofHash + strconv.Itoa(i)))
+			has, _ := k.storeService.OpenKVStore(ctx).Has([]byte(msg.Creator + msg.ProofHash + strconv.Itoa(i)))
+			if has {
+				answer = append(answer, partial...)
+			} else {
+				answer = []byte("failure")
+				break
+			}
 		}
 		event := sdk.NewEvent("message received",
 			sdk.NewAttribute("message", string(answer)))
